Create and Read operation level 1 complete-11/Sep/2020

--- a/AUSPrintings-war/WebContent/errorPages/error.xhtml
+++ b/AUSPrintings-war/WebContent/errorPages/error.xhtml
@@ -12,7 +12,8 @@
 	<p>The user credentials you have supplied are incorrect.</p>
 	<p>
 		Please attempt to
-		<h:link outcome="login" value="login" />
+		<!--<h:link outcome="login.xhtml" value="login" /> -->
+		<a href="../../">Index</a>
 		again.
 	</p>
 </h:body>
