--- a/AUSPrintings-war/WebContent/logout.xhtml
+++ b/AUSPrintings-war/WebContent/logout.xhtml
@@ -6,6 +6,22 @@
 
 <h:head></h:head> 
 <body> 
-Logging out !!!
+<h:form>
+	<h:outputLabel value="#{logoutBean.logoutMsg}" />
+</h:form>
+
+
+
+
+
+
+<br/>
+
+<p>Please attempt to <h:link outcome="login.xhtml" value="login" /> again.</p>
+
+<br /><br />
+
+<p>Please attempt to <h:link outcome="index.xhtml" value="Index" /> again.</p>
+
 </body> 
 </html>
