--- a/AUSPrintings-war/WebContent/customer/ManageCustomers.xhtml
+++ b/AUSPrintings-war/WebContent/customer/ManageCustomers.xhtml
@@ -28,13 +28,13 @@
     
 </h:head>
 
-<h:link value="Add" outcome="AddCustomer.xhtml"/>
+<h:link value="Add Customer" outcome="AddCustomer.xhtml"/>
 
-<br />
+
 <h:body>
 <h:form>
 
-
+<br /><br />
 
 <table id="tableData"  class="table table-striped table-bordered" style="width:100%">
 		<thead>
