--- a/AUSPrintings-war/WebContent/admin/header.xhtml
+++ b/AUSPrintings-war/WebContent/admin/header.xhtml
@@ -16,24 +16,21 @@
  
  <tr><td>
  <div class="header-left">
-	 <!-- <a class="active" href="../../faces/staff/home.xhtml">Home</a> -->
 	 
-	<h:link class="active" value="Home" outcome="/faces/staff/home.xhtml"/>
+	<h:link class="active" value="Home" outcome="/faces/admin/home.xhtml"/>
 
 	</div>
 </td><td>
 	
 
 	<div class="header-center">
-		<label> Welcome #{headerBean.loggedUserName}</label>
+		<label> welcome #{headerBean.loggedUserName}</label>
 	</div>	
 </td><td>
   <div class="header-right">
     <!-- <a href="../logout.xhtml">Logout</a>  -->
     <h:link class="active" value="Logout" outcome="/faces/logout.xhtml"/>
 	
-	<!--  <h:outputLink value="../logout.xhtml"> Logout houtput faces
-	</h:outputLink>-->
 	
   </div>
   
