--- a/AUSPrintings-war/WebContent/contacts/contactEdit.xhtml
+++ b/AUSPrintings-war/WebContent/contacts/contactEdit.xhtml
@@ -11,7 +11,7 @@
 
 
 
-<ui:composition template="../staff/header.xhtml">
+<ui:composition template="../header.xhtml">
 <ui:define name="headerContents">
 	 <h:outputStylesheet library="css" name="bootstrap.min.css"></h:outputStylesheet>
 </ui:define>
