--- a/AUSPrintings-war/WebContent/customer/customerDetails.xhtml
+++ b/AUSPrintings-war/WebContent/customer/customerDetails.xhtml
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css"/>
 </h:head>
 
-<ui:composition template="../staff/header.xhtml">
+<ui:composition template="../header.xhtml">
 
 <ui:define name="headerContents">
 	<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css"/>
