--- a/AUSPrintings-war/WebContent/staff/home.xhtml
+++ b/AUSPrintings-war/WebContent/staff/home.xhtml
@@ -4,7 +4,7 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://java.sun.com/jsf/html"> 
 
-<ui:composition template="header.xhtml">
+<ui:composition template="../header.xhtml">
 
 <ui:define name="headerContents">
 	 <h:outputStylesheet library="css" name="bootstrap.min.css"></h:outputStylesheet>
