--- a/AUSPrintings-war/WebContent/contacts/addContact.xhtml
+++ b/AUSPrintings-war/WebContent/contacts/addContact.xhtml
@@ -6,7 +6,7 @@
 	      xmlns:rich="http://richfaces.org/rich"> 
 	
 	
-	<ui:composition template="../staff/header.xhtml">
+	<ui:composition template="../header.xhtml">
 	<ui:define name="headerContents">
 		
 		 <h:outputStylesheet library="css" name="bootstrap.min.css"></h:outputStylesheet>
