All basic customer, contact, staff, admin functionalities complete

--- a/AUSPrintings-war/WebContent/admin/home.xhtml
+++ b/AUSPrintings-war/WebContent/admin/home.xhtml
@@ -41,7 +41,7 @@
 	
 	
 	<div class="header-center">
-	<h:link  class="btn btn-primary"  value="Manage Staff" outcome="/faces/admin/manageStaff.xhtml"/>
+	<h:link  class="btn btn-primary"  value="Allocate Customer-Staff" outcome="/faces/admin/assignCustomerStaff.xhtml"/>
 </div>
 	<br />
 	
