--- a/AUSPrintings-war/WebContent/header.xhtml
+++ b/AUSPrintings-war/WebContent/header.xhtml
@@ -29,6 +29,15 @@
 		<label> welcome header  ====  #{headerBean.loggedUserName}</label>
 	</div>	
 </td><td>
+
+ <div class="header-right">
+    <h:link class="active" value="Change Password" outcome="/faces/changePassword.xhtml"/>
+	
+	
+  </div>
+  
+  
+  
   <div class="header-right">
     <!-- <a href="../logout.xhtml">Logout</a>  -->
     <h:link class="active" value="Logout" outcome="/faces/logout.xhtml"/>
