--- a/AUSPrintings-war/WebContent/admin/manageStaff.xhtml
+++ b/AUSPrintings-war/WebContent/admin/manageStaff.xhtml
@@ -69,7 +69,8 @@
                                    <f:param name="agentId" value="#{staff.agentId}"/> 
                    </h:link>
                    
-                   <h:commandLink value="Delete" action="#{manageStaffBean.deleteAgent(staff)}">
+                   <h:commandLink value="Delete" action="#{manageStaffBean.deleteAgent(staff)}"
+                   onclick="if (! confirm('Do you want to delete staff?')) return false">
                                 </h:commandLink>
                   
     			</td>
