--- a/AUSPrintings-war/WebContent/contacts/manageContacts.xhtml
+++ b/AUSPrintings-war/WebContent/contacts/manageContacts.xhtml
@@ -30,12 +30,16 @@
 			<script>
 
 
- $(document).ready(function () {
-     $('#customerContactTable').DataTable();
-;
+  $(document).ready(function () {
+     $('#tableData').DataTable();
  });
- 
 
+ function dataTableLoad(){
+	  $('#tableData').DataTable();
+	 }
+	 
+	 jsf.ajax.addOnEvent(dataTableLoad);
+	 
 
     </script>
 
@@ -83,7 +87,7 @@ Select Customer to see their Contacts:
 				<br />
 				<!-- Customer contact table populated by ajax -->
 
-				<table id="customerContactTable"
+				<table id="tableData"
 					class="table table-striped table-bordered" style="width: 100%">
 					<thead>
 						<tr>
@@ -119,7 +123,9 @@ Select Customer to see their Contacts:
 										<f:param name="customerContactId"
 											value="#{contact.customerContactId}" />
 									</h:link> <h:commandLink value="Delete"
-										action="#{manageContactBean.deleteContact(contact)}">
+										action="#{manageContactBean.deleteContact(contact)}"
+										onclick="if (! confirm('Do you want to delete Contact?')) return false"
+										>
 										<!-- Customer ID is sent to load this customer details after deletion -->
 										<f:param name="customerId"
 											value="#{manageContactBean.selectedCustomerId}" />
