--- a/AUSPrintings-war/WebContent/errorPages/error.xhtml
+++ b/AUSPrintings-war/WebContent/errorPages/error.xhtml
@@ -6,15 +6,25 @@
 
 <h:head>
 	<title>Authentication Error</title>
+	<style>
+		<h:outputStylesheet library = "css" name = "logoutStyle.css" /> 
+	</style>
 </h:head>
 <h:body>
-	<h1>Authentication Error</h1>
-	<p>The user credentials you have supplied are incorrect.</p>
-	<p>
-		Please attempt to
-		<!--<h:link outcome="login.xhtml" value="login" /> -->
-		<a href="../../">Index</a>
-		again.
-	</p>
+	
+<div class="error">
+  <!-- <h1>403 </h1> -->
+  <h15><b><h:outputLabel value="Invalid Credentials!!" /></b></h15>
+  <br />
+  <br />
+  <h2> Click		<i class="material-icons">		
+  
+  	<h:outputLink value="/_AUSPrintings-war/" >Homepage</h:outputLink> 	    </i> 
+		
+  to try again</h2>
+  
+  <!--<h2> <input type="button" value="Go back"></input></h2> -->
+  
+</div>
 </h:body>
 </html>
